app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapplication
  labels:
    app: webapplication
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapplication
  template:
    metadata:
      labels:
        app: webapplication
    spec:
      containers:
      - name: webapplication
        image: 707677861059.dkr.ecr.ap-northeast-2.amazonaws.com/nadeuri:8bec4e3892f45f7713ded4d7297f544aea5498e0
        ports:
        - containerPort: 8080
