app/rds_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rds-service
spec:
  type: ExternalName
  externalName: prod-db.c4zzcvkkrxzn.ap-northeast-2.rds.amazonaws.com
